--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,4 +17,7 @@
         </activity>
     </application>
 
+    <uses-feature android:name="android.hardware.camera2"
+                  android:required="true" />
+
 </manifest>
