getting file path of temp file

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,5 +19,7 @@
 
     <uses-feature android:name="android.hardware.camera2"
                   android:required="true" />
+    <uses-feature android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+                  android:required="true" />
 
 </manifest>
